frontend/test/should_fail/index_exec_mm_size.grg
#using "index_min_max_size_model.gm"

rule r {
	n:N -e:E->;
	
	modify {
	---
		exec( {{ indexSize(n)==0 }} );
	}
}
